Clarify SERVER address and verticle communication
Updated README to clarify the SERVER address and verticle communication.